# pipeline-congestion-basis-spread-arbitrage-model

./: README.md  main.py  pyproject.toml  requirements.txt
config/: data_sources.yaml  model_params.yaml  regions.yaml
src/: __init__.py
src/backtest/: arbitrage_backtester.py  pnl_metrics.py
src/data/: capacity_scraper.py  eia_loader.py  pipeline_notices.py  weather_loader.py
src/features/: basis_features.py  congestion_features.py  imbalance_metrics.py
src/models/: arbitrage_classifier.py  congestion_regression.py  structural_network_model.py
src/utils/: io_utils.py  logging_utils.py  plotting.py
